# mcap_demo

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mcap_logging.py  mkdocs.yml  objects.inv  pyproject.toml  sensor_data.proto
.github/workflows/: documentation.yml  publishing.yml  release.yml  testing.yml
CHANGELOG/: index.html
docs/: CHANGELOG.md  how-to-guides.md  index.md  reference.md
docs/explanations/: foxglove.md  mcap.md  motivation.md  protobuf.md
docs/references/: mcap_handler_references.md  mcap_logger_references.md  topic_logger_references.md
docs/tutorials/: create-you-first-log-new.md  create-you-first-log-old.md  create-you-first-log.md  installation.md  logging-sensor-data-new.md  logging-sensor-data-old.md  logging-sensor-data.md  use-console-stream-with-mcap-logging.md  using-mcap-logging-in-libraries.md
examples/: application.py  hello.py  library.py  thermostat.py  thermostat_data.proto  thermostat_data_pb2.py
explanations/foxglove/: index.html
explanations/mcap/: index.html
explanations/motivation/: index.html
explanations/protobuf/: index.html
how-to-guides/: index.html
mcap_logger/: demo.py  mcap_logger.py  topic_logger.py
mcap_logger/demo/: demo.py  sensor_data.proto
references/mcap_handler_references/: index.html
references/topic_logger_references/: index.html
search/: search_index.json
tests/: sensor_data_pb2.py  test_integration.py  test_mcap_logger.py  test_topic.py
tutorials/create-you-first-log/: index.html
tutorials/installation/: index.html
(+3 files in other folders)
