[project]
name = "mcap-demo"
version = "0.2.0"
description = "playground for mcap"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "foxglove-schemas-protobuf>=0.2.1",
    "mcap-protobuf-support>=0.5.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "W605", "ANN101", "SIM108", "TD003", "FIX002", "COM812", "ISC001", "G004"]
exclude = ["tests/*"]
